--- a/react-vite-app/package.json
+++ b/react-vite-app/package.json
@@ -1,18 +1,22 @@
-{
-  "name": "music-player",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+{ 
+  "homepage": "https://github.com/TheJiajuLi/dreamingpolar.com.github.io.git",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+"name": "music-player",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "dependencies": {
     "color-thief-react": "^2.1.0",
     "colorthief": "^2.6.0",
     "framer-motion": "^10.16.4",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
