--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "color-thief-react": "^2.1.0",
     "colorthief": "^2.6.0",
     "fast-average-color": "^9.4.0",
@@ -23,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.1",
+    "styled-components": "^6.1.16",
     "tone": "^14.7.77",
     "wavesurfer.js": "^7.4.5"
   },
