--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dreaming-polar",
   "private": true,
-  "version": "2.6.0",
+  "version": "3.0.0",
   "type": "module",
   "homepage": "https://github.com/TheJiajuLi/dreamingpolar.com.github.io.git",
   "scripts": {
-    "predeploy": "npm run build",
+    "clean": "rimraf dist",
+    "predeploy": "npm run clean && npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
@@ -38,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.3.0",
+    "rimraf": "^5.0.10",
     "typescript": "^5.0.2",
     "vite": "^4.5.9"
   }
